// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Task: config-ts ember app > ember3-app > create tsconfig if not existed 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "es2020",
    "moduleResolution": "node",
    "newLine": "lf",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedIndexedAccess": true,
    "strict": true,
    "target": "ES2021",
  },
}
`;

exports[`Task: config-ts ember app > ember3-app > create tsconfig if not existed 2`] = `
"[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-app > postTsSetup hook from user config 1`] = `
"[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[DATA] Run postTsSetup from config
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-app > run custom config command with user config provided 1`] = `
"[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-app > skip custom config command 1`] = `
"[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-app > skip if tsconfig.json exists with strict on 1`] = `
"[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoAddon > create tsconfig if not existed 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "es2020",
    "moduleResolution": "node",
    "newLine": "lf",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedIndexedAccess": true,
    "strict": true,
    "target": "ES2021",
  },
}
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoAddon > create tsconfig if not existed 2`] = `
"[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoAddon > postTsSetup hook from user config 1`] = `
"[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[DATA] Run postTsSetup from config
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoAddon > run custom config command with user config provided 1`] = `
"[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoAddon > skip custom config command 1`] = `
"[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoAddon > skip if tsconfig.json exists with strict on 1`] = `
"[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoEngine > create tsconfig if not existed 1`] = `
{
  "$schema": "https://json.schemastore.org/tsconfig",
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "es2020",
    "moduleResolution": "node",
    "newLine": "lf",
    "noEmit": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedIndexedAccess": true,
    "strict": true,
    "target": "ES2021",
  },
}
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoEngine > create tsconfig if not existed 2`] = `
"[STARTED] Create tsconfig.json
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoEngine > postTsSetup hook from user config 1`] = `
"[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[DATA] Run postTsSetup from config
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoEngine > run custom config command with user config provided 1`] = `
"[STARTED] Create tsconfig.json
[DATA] Create tsconfig from config
[SUCCESS] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoEngine > skip custom config command 1`] = `
"[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
"
`;

exports[`Task: config-ts ember app > ember3-appWithInRepoEngine > skip if tsconfig.json exists with strict on 1`] = `
"[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
[STARTED] Create tsconfig.json
[SKIPPED] Create tsconfig.json
"
`;
